--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0XM-cz-TRj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,6 +9,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="hr7-Ic-hpd">
+            <objects>
+                <navigationController id="0XM-cz-TRj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AtO-Th-lgV">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uT3-ag-On5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Xk-0m-Jbi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-758" y="78"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,33 +34,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0H-ut-c1l" customClass="ButtonCancel" customModule="Example" customModuleProvider="target">
-                                <rect key="frame" x="16" y="60" width="382" height="50"/>
+                                <rect key="frame" x="16" y="104" width="382" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="30h-iQ-wZ3"/>
                                 </constraints>
                                 <state key="normal" title="CustomButton"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nB1-hD-ZZd" customClass="NFTextField" customModule="NFUIKit">
-                                <rect key="frame" x="16" y="126" width="382" height="60"/>
+                                <rect key="frame" x="16" y="170" width="382" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="CKF-xY-yYA"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WdE-Km-hH1" customClass="NFFormView" customModule="NFUIKit">
+                                <rect key="frame" x="20" y="247" width="374" height="599"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="WdE-Km-hH1" firstAttribute="top" secondItem="nB1-hD-ZZd" secondAttribute="bottom" constant="17" id="47a-07-w3u"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W0H-ut-c1l" secondAttribute="trailing" constant="16" id="AS5-rU-AAA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WdE-Km-hH1" secondAttribute="bottom" constant="16" id="DaR-1c-ZIO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WdE-Km-hH1" secondAttribute="trailing" constant="20" id="IOf-rQ-tfX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nB1-hD-ZZd" secondAttribute="trailing" constant="16" id="a2r-6N-VG3"/>
                             <constraint firstItem="nB1-hD-ZZd" firstAttribute="top" secondItem="W0H-ut-c1l" secondAttribute="bottom" constant="16" id="cQH-v7-7FV"/>
+                            <constraint firstItem="WdE-Km-hH1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eTO-Gl-4c7"/>
                             <constraint firstItem="W0H-ut-c1l" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="wSV-V1-xda"/>
                             <constraint firstItem="W0H-ut-c1l" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="xYN-Tu-xip"/>
                             <constraint firstItem="nB1-hD-ZZd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ygO-nY-Iuk"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="g0T-zU-SUN"/>
                     <connections>
                         <outlet property="button" destination="W0H-ut-c1l" id="z9i-im-gHc"/>
+                        <outlet property="form" destination="WdE-Km-hH1" id="Off-21-YtT"/>
                         <outlet property="textField" destination="nB1-hD-ZZd" id="CwD-yq-rL8"/>
                     </connections>
                 </viewController>
@@ -56,6 +82,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
