added some elements

--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -78,13 +78,175 @@
             </objects>
             <point key="canvasLocation" x="81" y="79"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="nuN-VU-udZ">
+            <objects>
+                <viewController id="2I6-hd-X7o" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RkI-Q1-dD8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gRj-Bg-OB2">
+                                <rect key="frame" x="20" y="64" width="374" height="778"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aYB-60-VA0">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="778"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YcN-nl-vln">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="194.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qve-su-5JY">
+                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="4Sv-Vx-ruB"/>
+                                                            <constraint firstAttribute="width" constant="40" id="p3B-Fv-6gw"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aF8-Uy-wZD">
+                                                        <rect key="frame" x="40" y="0.0" width="334" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="s9t-Sl-jlP"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="Qve-su-5JY" firstAttribute="leading" secondItem="YcN-nl-vln" secondAttribute="leading" id="71w-fm-ldD"/>
+                                                    <constraint firstItem="aF8-Uy-wZD" firstAttribute="top" secondItem="YcN-nl-vln" secondAttribute="top" id="BT2-cg-WOr"/>
+                                                    <constraint firstAttribute="trailing" secondItem="aF8-Uy-wZD" secondAttribute="trailing" id="nEH-TX-Q0h"/>
+                                                    <constraint firstItem="Qve-su-5JY" firstAttribute="top" secondItem="YcN-nl-vln" secondAttribute="top" id="qDe-jk-DAQ"/>
+                                                    <constraint firstItem="aF8-Uy-wZD" firstAttribute="leading" secondItem="Qve-su-5JY" secondAttribute="trailing" id="sg1-om-4pe"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LMn-g7-uiR">
+                                                <rect key="frame" x="0.0" y="194.5" width="374" height="194.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V8d-WU-BAp">
+                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="40" id="c4s-pE-LFs"/>
+                                                            <constraint firstAttribute="height" constant="40" id="m0u-5y-u6Q"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARr-KI-Y72">
+                                                        <rect key="frame" x="40" y="0.0" width="334" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="1oV-3E-tg2"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="ARr-KI-Y72" secondAttribute="trailing" id="8Tf-Te-bJY"/>
+                                                    <constraint firstItem="ARr-KI-Y72" firstAttribute="top" secondItem="LMn-g7-uiR" secondAttribute="top" id="AAy-fN-EjZ"/>
+                                                    <constraint firstItem="V8d-WU-BAp" firstAttribute="top" secondItem="LMn-g7-uiR" secondAttribute="top" id="Cpb-Hv-Qu7"/>
+                                                    <constraint firstItem="ARr-KI-Y72" firstAttribute="leading" secondItem="V8d-WU-BAp" secondAttribute="trailing" id="fQy-V0-snk"/>
+                                                    <constraint firstItem="V8d-WU-BAp" firstAttribute="leading" secondItem="LMn-g7-uiR" secondAttribute="leading" id="usw-hE-N48"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLT-QR-o01">
+                                                <rect key="frame" x="0.0" y="389" width="374" height="194.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWb-RZ-cxb">
+                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="sHf-vU-4qH"/>
+                                                            <constraint firstAttribute="width" constant="40" id="viH-mB-A5m"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xtB-pW-3Mt">
+                                                        <rect key="frame" x="40" y="0.0" width="334" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="O2Z-LA-KK2"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="xtB-pW-3Mt" firstAttribute="top" secondItem="LLT-QR-o01" secondAttribute="top" id="751-Zo-Hhb"/>
+                                                    <constraint firstAttribute="trailing" secondItem="xtB-pW-3Mt" secondAttribute="trailing" id="ESN-yg-SjV"/>
+                                                    <constraint firstItem="xtB-pW-3Mt" firstAttribute="leading" secondItem="aWb-RZ-cxb" secondAttribute="trailing" id="fWH-Kh-02U"/>
+                                                    <constraint firstItem="aWb-RZ-cxb" firstAttribute="top" secondItem="LLT-QR-o01" secondAttribute="top" id="nEH-wS-4DD"/>
+                                                    <constraint firstItem="aWb-RZ-cxb" firstAttribute="leading" secondItem="LLT-QR-o01" secondAttribute="leading" id="ytc-Z0-kDE"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w80-Ue-fsf">
+                                                <rect key="frame" x="0.0" y="583.5" width="374" height="194.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgF-1i-8A2">
+                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="40" id="C0P-7T-euU"/>
+                                                            <constraint firstAttribute="height" constant="40" id="sQJ-da-ysi"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sox-1Q-FCo">
+                                                        <rect key="frame" x="40" y="0.0" width="334" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="uqZ-9C-K7A"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="sox-1Q-FCo" firstAttribute="top" secondItem="w80-Ue-fsf" secondAttribute="top" id="AuR-ai-nNx"/>
+                                                    <constraint firstItem="sox-1Q-FCo" firstAttribute="leading" secondItem="YgF-1i-8A2" secondAttribute="trailing" id="XEx-Cc-oGS"/>
+                                                    <constraint firstItem="YgF-1i-8A2" firstAttribute="top" secondItem="w80-Ue-fsf" secondAttribute="top" id="ZOQ-HH-seq"/>
+                                                    <constraint firstAttribute="trailing" secondItem="sox-1Q-FCo" secondAttribute="trailing" id="bhB-QO-I8w"/>
+                                                    <constraint firstItem="YgF-1i-8A2" firstAttribute="leading" secondItem="w80-Ue-fsf" secondAttribute="leading" id="niB-qf-aNN"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="aYB-60-VA0" firstAttribute="leading" secondItem="gRj-Bg-OB2" secondAttribute="leading" id="DXm-BB-0Nz"/>
+                                    <constraint firstAttribute="bottom" secondItem="aYB-60-VA0" secondAttribute="bottom" id="GP5-nm-Iqe"/>
+                                    <constraint firstAttribute="trailing" secondItem="aYB-60-VA0" secondAttribute="trailing" id="lHL-XG-RwX"/>
+                                    <constraint firstItem="aYB-60-VA0" firstAttribute="top" secondItem="gRj-Bg-OB2" secondAttribute="top" id="xO4-rF-NME"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="v3G-OI-4yB"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstItem="v3G-OI-4yB" firstAttribute="bottom" secondItem="gRj-Bg-OB2" secondAttribute="bottom" constant="20" id="Ea2-bf-RBL"/>
+                            <constraint firstItem="gRj-Bg-OB2" firstAttribute="top" secondItem="v3G-OI-4yB" secondAttribute="top" priority="998" constant="20" id="FLr-ye-JUl"/>
+                            <constraint firstItem="gRj-Bg-OB2" firstAttribute="leading" secondItem="v3G-OI-4yB" secondAttribute="leading" constant="20" id="Pjj-5b-rg9"/>
+                            <constraint firstItem="gRj-Bg-OB2" firstAttribute="centerX" secondItem="v3G-OI-4yB" secondAttribute="centerX" id="S02-Z5-4hH"/>
+                            <constraint firstItem="v3G-OI-4yB" firstAttribute="trailing" secondItem="gRj-Bg-OB2" secondAttribute="trailing" constant="20" id="r8H-a4-9Uk"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tRT-re-JeE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="969.56521739130437" y="145.98214285714286"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
